--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
   gap: 10px;
   background-color: red;
   color: white;
-  border-radius: 10px;
+  border-radius: 5px;
   height: 50px;
   width: 150px;
   cursor: pointer;
@@ -67,7 +67,7 @@ body {
   background-color: transparent;
   color: rgb(255, 0, 0);
   border: 2px solid red;
-  border-radius: 10px;
+  border-radius: 5px;
   height: 50px;
   width: 150px;
   cursor: pointer;
@@ -100,10 +100,11 @@ body {
 
 .choose-routes {
   width: 80%;
+  max-width: 1400px;
   background-color: #ffffff;
   box-shadow: 0 0 10px black;
-  padding: 40px 40px 20px 40px;
-  border-radius: 10px;
+  padding: 40px;
+  border-radius: 5px;
   position: relative;
   margin: 80px 10px;
   margin-top: 120px;
@@ -113,7 +114,7 @@ body {
   position: absolute;
   top: 0;
   left: 50%;
-  transform: translate(-50%, -100%);
+  transform: translate(-50%, -95%);
   width: 60%;
   display: flex;
   align-items: center;
@@ -130,7 +131,7 @@ body {
   transform: translate(-50%, 50%);
   background-color: red;
   color: white;
-  border-radius: 10px;
+  border-radius: 5px;
   border: none;
   outline: none;
   padding: 10px 20px;
@@ -180,17 +181,29 @@ body {
   color: white;
 }
 
+.select-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 10px;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
 .from-to,
 .dates {
   display: flex;
   align-items: center;
   border: 1px solid red;
-  border-radius: 10px;
+  border-radius: 5px;
   padding: 0 10px;
   background-color: white;
   margin: 10px 0;
   position: relative;
-  width: 100%;
+  flex: 1;
+  min-width: 450px;
+  height: 60px;
 }
 
 .from,
@@ -198,7 +211,7 @@ body {
   display: flex;
   flex-direction: column;
   width: 50%;
-  padding: 5px 30px;
+  padding: 10px 30px;
   overflow: hidden;
 }
 
@@ -218,7 +231,7 @@ body {
 }
 
 .switch-arrow {
-  border-radius: 10px;
+  border-radius: 5px;
   border: 1px solid red;
   background-color: white;
   cursor: pointer;
@@ -250,13 +263,25 @@ label {
   text-align: left;
 }
 
-.tranding-places {
-  width: 100%;
+.tranding-place-section {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: flex-start;
+  flex-direction: row;
+  gap: 10px;
   flex-wrap: wrap;
-  padding: 10px;
+  width: 100%;
+}
+
+.tranding-place-section > p {
+  font-size: 12px;
+}
+
+.tranding-places {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .options {
@@ -264,7 +289,7 @@ label {
   z-index: 2;
   top: 70px;
   background-color: #ffffff;
-  border-radius: 10px;
+  border-radius: 5px;
   padding: 10px;
   width: 300px;
   display: none;
@@ -293,7 +318,7 @@ label {
 .option {
   padding: 10px;
   margin: 10px;
-  border-radius: 10px;
+  border-radius: 5px;
   cursor: pointer;
   background-color: white;
   transition: all 0.2s;
@@ -307,9 +332,9 @@ label {
 .tranding-place {
   margin: 5px;
   opacity: 0.5;
-  padding: 10px;
+  padding: 5px 10px;
   background-color: #dfdfdf;
-  border-radius: 10px;
+  border-radius: 5px;
   cursor: pointer;
   font-size: 12px;
 }
@@ -320,14 +345,14 @@ label {
   padding: 10px;
   margin: 10px;
   background: white;
-  border-radius: 10px;
+  border-radius: 5px;
   padding: 20px;
 }
 
 .bus {
   width: 100%;
   border: 2px solid red;
-  border-radius: 10px;
+  border-radius: 5px;
   padding: 10px;
   display: flex;
   align-items: center;
@@ -338,7 +363,7 @@ label {
 .bus div {
   margin: 10px;
   background-color: rgb(212, 212, 212);
-  border-radius: 10px;
+  border-radius: 5px;
   padding: 5px 10px;
 }
 
@@ -408,9 +433,13 @@ label {
     width: 60px;
     height: 60px;
     gap: 10px;
-    border-radius: 10px;
+    border-radius: 5px;
   }
   .from {
     padding: 5px;
+  }
+  .from-to,
+  .dates {
+    min-width: 300px;
   }
 }
